# bdk-bip322

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: cont_integration.yml  rust.yml
examples/: sign_verify_full.rs  sign_verify_legacy.rs  sign_verify_simple.rs
src/: error.rs  lib.rs  sign.rs  signer.rs  utils.rs  verifier.rs  verify.rs
