[package]
name = "bdk-bip322"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
bitcoin = { version = "0.32.5", features = [ "base64" ], default-features = false }

[features]
default = ["std"]
std = []

[dev-dependencies]
bdk_wallet = { version = "1.2.0", features = ["rusqlite"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
